# aminograph

./: .gitignore  Cargo.toml
report-ui/: .gitignore  graph.json  index.html  package-lock.json  package.json  vite.config.js
report-ui/src/: App.svelte  Card.svelte  Debug.svelte  DebugValue.svelte  Graph.svelte  GraphPage.svelte  Grid.svelte  Home.svelte  Layers.svelte  NavTab.svelte  Node.svelte  NodeGraph.svelte  NodeLayout.svelte  NodeSequence.svelte  NodeSequences.svelte  Nodes.svelte  Sequence.svelte  SequenceItem.svelte  SequenceItemGraph.svelte  SequenceItemLayout.svelte  Sequences.svelte  Tree.svelte  find-changes.ts  main.ts  report-function.ts  report.ts  serialize-dependants.ts  serialize-dependencies.ts  serialize-plan.ts  site.css  types.ts  url.ts
src/: alignment.rs  amino_acids.rs  fixed.rs  graph.rs  log.rs  main.rs  order_optimize.rs  prelude.rs  report-template.html  slab.rs  trace.rs
src/optimization/: amino_acids.rs  groups.rs  mod.rs  moves.rs  nn_join.rs  parameter.rs
templates/: base.html  base.html.mako  compare.html.mako  explain-macros.html  explain.html.mako  report-macros.html  report.html
