[package]
name = "aminograph"
version = "0.0.0"
authors = ["Winston Ewert <winstonewert@gmail.com>"]
edition = "2018"

[dependencies]
argmin = "0.5.0"
rand = "0.8.3"
serde_json = {version = "1.0.64", features=["preserve_order"]}
seq_io = "0.3.1"
num-derive = "0.3.3"
num-traits = "0.2.14"
color-eyre = "0.5.10"
noisy_float = { version = "0.2.0", features = ["serde"] }
itertools = "0.10.1"
log = "0.4.11"
serde = { version = "1.0.118", features = ["serde_derive"] }
fnv = "1.0.7"
num = "0.4.0"
rayon = "1.5.0"
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
statrs = "0.15.0"
structopt = "0.3.21"
flate2 = "1.0.20"
sorted-vec = "0.5.2"
either = "1.6.1"
pbr = "1.0.4"
crossterm = "0.21.0"
time = "0.3.3"
array_ext = "0.3.0"
indexmap = {version="1.7.0", features=["serde"]}
regex = "1.5.4"
triomphe = "0.1.5"
reformation = "0.5.3"
jemallocator = "0.3.2"
fixed = "1.11.0"
nalgebra = {version="0.30.1", features=["serde-serialize"]}


[dev-dependencies]
quickcheck = "1.0.3"
newick-rs = "0.2.0"
lazy_static = "1.4.0"
regex = "1.5.4"


[profile.release]
debug=true
